--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>PWA Chat – Grundgerüst</title>
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#111111">
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
