--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="manifest" href="manifest.json" />
   <meta name="theme-color" content="#111111" />
   <link rel="stylesheet" href="styles.css" />
-  <link rel="icon" href="data:," />
+  <link rel="icon" href="icons/icon-192.png" />
 </head>
 <body>
   <h1>PWA Chat</h1>
