--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>PWA Chat</title>
 
-  <link rel="manifest" href="manifest.json" />
+  <!-- Cache-Buster: v=2 -->
+  <link rel="manifest" href="manifest.json?v=2" />
   <meta name="theme-color" content="#111111" />
   <link rel="stylesheet" href="styles.css" />
   <link rel="icon" href="icons/icon-192.png" />
