--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="de">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>PWA Chat</title>
 
-  <!-- Cache-Buster: v=2 -->
-  <link rel="manifest" href="manifest.json?v=2" />
+  <link rel="manifest" href="manifest.json" />
   <meta name="theme-color" content="#111111" />
   <link rel="stylesheet" href="styles.css" />
   <link rel="icon" href="icons/icon-192.png" />
@@ -16,8 +15,11 @@
   <p>Grundgerüst steht. (Nur eine HTML-Datei, noch keine PWA-Funktionen.)</p>
 
   <script>
-    if ("serviceWorker" in navigator) {
-      navigator.serviceWorker.register("./service-worker.js");
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker
+        .register('./service-worker.js')
+        .then(() => console.log('✅ Service Worker registriert'))
+        .catch(err => console.error('❌ Service Worker Fehler:', err));
     }
   </script>
 </body>
