--- a/index.html
+++ b/index.html
@@ -22,5 +22,7 @@
         .catch(err => console.error('❌ Service Worker Fehler:', err));
     }
   </script>
+
+  <script src="install.js"></script>
 </body>
 </html>
