--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="theme-color" content="#111111" />
   <link rel="stylesheet" href="styles.css" />
   <link rel="icon" href="icons/icon-192.png" />
+  <link rel="icon" href="/chat-pwa/icons/icon-192.png" type="image/png">
 </head>
 <body>
   <h1>PWA Chat</h1>
@@ -22,6 +23,10 @@
         .catch(err => console.error('❌ Service Worker Fehler:', err));
     }
   </script>
+
+  <script src="install.js"></script>
+
+  <script src="install.js"></script>
 
   <script src="install.js"></script>
 
