Add native-like chat UI shell (no API yet)

--- a/index.html
+++ b/index.html
@@ -24,5 +24,18 @@
     }
   </script>
   <script src="install.js"></script>
+<div class="app">
+  <div class="app-header">
+    <div class="app-title">PWA Chat</div>
+  </div>
+  <div class="chat">
+    <div id="log" class="chat-log"></div>
+    <div class="input-row">
+      <input id="msg" type="text" placeholder="Nachricht eingeben …" autocomplete="off" />
+      <button id="send" class="btn">Senden</button>
+    </div>
+  </div>
+</div>
+<script src="app.js"></script>
 </body>
 </html>
